# rlhf-eval

./: .env  .gitignore  AGENTS.md  Dockerfile  PROGRESS.md  Project_Progress.md  README.md  docker-compose.yml  flagged_indices.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
dashboard/: app.py
notebooks/: reward_model_experiment.ipynb
scripts/: export_flagged_indices.py
src/rlhf_eval/api/: routes.py
src/rlhf_eval/config/: settings.py
src/rlhf_eval/database/: connection.py  models.py  operations.py
src/rlhf_eval/database/models/: base.py  evaluation.py
src/rlhf_eval/detectors/: __init__.py  base.py  length_ratio.py  llm_judge.py  readability.py  refusal_bias.py  repetition.py  semantic_similarity.py  unsafe_prompt.py
src/rlhf_eval/pipeline/: data_loader.py  quality_pipeline.py
src/rlhf_eval/reward/: __init__.py  dataset.py  evaluate.py  model.py  train.py
src/rlhf_eval/utils/: __init__.py  parsing.py  stats.py
tests/: test_database.py  test_detectors.py  test_llm_judge.py  test_parsing.py  test_pipeline_integration.py
