[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
packages = ["src/rlhf_eval"]

[project]
name = "RLHF-EVAL"
version = "0.1.0"
description = "A production-grade rlhf evaluation system"
requires-python = ">= 3.11"
authors = [{name="Anthony Eugene Lewallen", email="anthonylewallen.dev@gmail.com"}]
dependencies = [
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "numpy>=1.26",
    "scipy>=1.12",
    "datasets>=2.18",
    "sentence-transformers>=2.7",
    "textstat>=0.7",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "torch>=2.2",
    "transformers>=4.40",
    "openai>=1.30",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.35",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-tqdm",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
